--- a/production-side-server/package.json
+++ b/production-side-server/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/saturnbored/Password-Manager#readme",
   "dependencies": {
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.15",
     "sqlite3": "^5.0.2"
   }
